# qasm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  app.h  asm.cpp  asm.h  cider.cpp  cider.h  config.h  eval.cpp  eval.h  libpal  libpoco  lup.s  merlintest.s  merlintests.sh  opcodes.cpp  parms.json  psuedo.cpp  psuedo.h  qasm  qasm.cpp  qasm.h  qasm.ini  qasm.json  qoptions.cpp  qoptions.h  runtests.sh  shell.cpp  single.sh  test.link  test.s  todo.txt  tomerlin.sh  util.cpp  util.h
ciderpress/diskimg/: CMakeLists.txt  DDD.cpp  DOS33.cpp  Gutenberg.cpp  HFS.cpp  Makefile  Nibble35.cpp  OzDOS.cpp  Pascal.cpp  ProDOS.cpp  UNIDOS.cpp
ciderpress/diskimg/libhfs/: CMakeLists.txt  Makefile  hfs.c  volume.c
ciderpress/linux/: getfile  iconv  makedisk  mdc  packddd  sstasm
ciderpress/nufxlib/: Archive.c  CMakeLists.txt  Makefile  SysDefs.h
ciderpress/nufxlib/samples/: Exerciser.c
cmake/: findPoco.cmake
diskimg/: CMakeLists.txt  DiskImgDetail.h  Global.cpp
libhfs/: CMakeLists.txt  hfs.c  volume.c
nufxlib/: Archive.c  CMakeLists.txt  Makefile.in
qasm.xcodeproj/: project.pbxproj
qasm.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
qasm.xcodeproj/xcshareddata/xcschemes/: qasm.xcscheme
qasm.xcodeproj/xcuserdata/lroathe.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: _FileInformation.txt  main.s  merlin_convert.s  merlin_orig.s  t1.s  testfile  testfile.s  testfile_Output.txt  tomerlin.sh  var.s
src/asm/: asm.1.s  asm.cmd.s  asm.cond.s  asm.dsk.s  asm.errors.s  asm.eval.s  asm.header.s  asm.macs.s  asm.opcodes.s  asm.vars.s
src/data/: external.s  globals.s  opcodetest.s  opdata.s  qa.equates.s  sym.equates.S  toolmacs.s
src/docs/: qasm.docs  shell.docs  zak.idea
src/edit/: edit.1.s  edit.apw.s  edit.cmd.s  edit.equs.s  edit.macs.s  edit.s  edit.types.s
src/exe/: ascii.s  cat.cmd.s  cat.macs.s  catalog.s  del.cmd.s  dump.s  time.s
src/intcmd/: intcmd.macs.s  qaintcmd.cmd.s  qaintcmd.s
src/link/: link.cmd.s  link.errors.s  link.eval.s  link.express.s  link.header.s  link.macs.s  link.vars.s  linker.1.s  linker.2.s
src/macros/: builtin.macs.S  qatools.macs.s
src/macs/: intcmd.macs.s  qatools.macs.s  tool.macs.s  toolmacs.s
src/qasystem/: login  qacmd  qagraf  qaintcmd  qaprefs.s  qatext  qatools  qe.prefs  quicklink.s
src/shell/: equs.s  ifd.equs.s  ifd.lib.s  link.s  macs.s  qasm.s  qasm1.s  qasm2.s
src/tools/: link.s  qatools.1.s  qatools.macs.s  qatools.s  tool.macs.s
src/utility/: catalog  delete  deletelink  dump  edit  lc  qlinkgs  time
testdata/: 1000-allops-value-65816.S  1001-allops-zero-65816.S  1002-embedded-instructions.S  1003-flags-and-branches.S  2000-allops-value-6502.S  2001-allops-zero-6502.S  2002-allops-value-65C02.S  2003-allops-zero-65C02.S  2006-operand-formats.S  2007-labels-and-symbols.S  2019-local-variables.S  3000-addresses.S  3001-lroathe.S  3001-runfile.S  3002-testfile.S  3003-var.S  3004-usr-qasm.S  3005-usr-merlin.S  3006-pea.S  3007-data-star.S  3008-macro-strings.S  3009-abs-ent-1.S  3009-abs-ent-2.S  3009-abs-ent-link.S  3010-gequ-link.S  3010-gequ.S  3012-rel-ds-1.S  3012-rel-ds-2.S  3012-rel-ds-3.S  3012-rel-ds-link.S  3013-len-pos-1.S  3013-len-pos-2.S  3013-len-pos-link.S  3014-ext-link.S  3014-ext.S  3015-amacc.S  allops-common-6502.S  allops-common-65816.S  allops-common-65C02.S  qasm  (+1 more)
testdata/M32_expected/: 2007-labels-and-symbols  2019-local-variables
